--- a/app/footer.css
+++ b/app/footer.css
@@ -1,10 +1,8 @@
-.header {
+.footer {
   background-color: black;
   color: white;
   padding: 10px, 20px;
-  padding-left: 16px;
-  padding-right: 16px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
